Add Tugas Perpekan

--- a/pyton-basic.ipynb
+++ b/pyton-basic.ipynb
@@ -64,6 +64,7 @@
     "# library import\n",
     "import time\n",
     "from numpy import var\n",
+    "import pandas as pd\n",
     "\n",
     "# inisialisasi variabel & implement operator aritmatika\n",
     "var = \"buah\"\n",
